<resources>
    <string name="app_name">Лабораторная работа №3</string>
    <string name="main_label">Реестр преподавателей</string>
    <string name="c_id">id</string>
    <string name="c_degree">degree</string>
    <string name="c_name">name</string>
    <string name="c_job_title">job_title</string>
    <string name="c_rank">rank</string>
    <string name="c_photo">photo</string>
    <string name="rank">Звание</string>
    <string name="name">ФИО</string>
    <string name="job_title">Должность</string>
    <string name="degree">Степень</string>
    <string name="photo">Ссылка на фото преподавателя</string>
    <string name="adding">Добавление преподавателя</string>
    <string name="editing">Редактирование преподавателя</string>
    <string name="delete">Удалить</string>
    <string name="deleting">Удаление</string>
    <string name="save">Сохранить</string>
    <string name="delete_teacher">Удалить преподавателя?</string>
    <string name="delete_all_teachers">Удалить всех преподавателей?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_teachers">Преподавателей нет</string>
    <string name="success_add">Новый преподаватель успешно добавлен</string>
    <string name="success_edit">Преподаватель успешно обновлен</string>
    <string name="success_delete">Преподаватель успешно удален</string>
    <string name="success_delete_all">Все преподаватели успешно удалены</string>
    <string name="error_add">Ошибка при добавлении нового преподавателя</string>
    <string name="error_edit">Ошибка обновления</string>
    <string name="error_delete">Ошибка удаления</string>
    <string name="error">Ошибка</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>
    <string name="errormessage1">Заполните поля</string>
    <string name="row_teacher">Преподаватель:</string>
    <string name="row_name">ФИО:</string>
    <string name="row_job_title">Должность:</string>
    <string name="row_rank">Звание:</string>
    <string name="row_degree">Степень:</string>
    <string name="row_photo">Фото:</string>
    <string name="_jpg">.jpg</string>
</resources>